# aicertify

./: .deepeval_telemetry.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI_ARCHITECTURE.md  CLI_README.md  CLI_SEQUENCE.md  CLI_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  README-Phase1.md  README-pypi.md  README.hi-IN.md  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  SECURITY.md  aicertify_cli.py  check_langfair.py  cleanup_root.sh  cli.py  cline_mcp_settings.json  content_safety_full_results.json  evaluation_report.html  example_params.json  fix_env_and_run_medical.sh  implementation_plan.md  integration_plan_rego_policy_integration.md  phase1_implementation_summary.md  phase1_implementation_tracking.md  pyproject.toml  requirements.txt  ruff.toml  run_toxic_coach_example.py  (+12 more)
.github/: CCLA.md  ICLA.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  pr-labeler.yml
.regal/: config.yaml
aicertify/: __init__.py  api.py  application.py  cli.py  combined_results.json  consolidated_eval.json  context_helpers.py  debug_imports.py  opa_policies  regulations.py  results_ToxicCareerCoachAI.json  test_output.txt
clean_examples/: CLEANUP_PLAN.md  CLEANUP_README.md  README.md  ROOT_README.md  cleanup_script.sh  verify_quickstart.py
debug-opa/: opa_cmd_20250313_143115.sh  opa_input_20250313_143115.json  simplified_test.json
debug_opa/: opa_debug_folder_eu_ai_act_20250310_104435.txt  opa_input_20250305_122013.json  opa_input_20250305_191107.json  opa_input_20250307_135526.json  opa_input_20250307_145407.json  opa_input_20250307_162458.json  opa_input_20250307_162826.json  opa_input_20250307_164820.json  opa_input_20250307_170156.json  opa_input_20250307_173858.json  opa_output_20250305_093957.txt  opa_output_20250305_093959.txt  opa_output_20250305_105754.txt  opa_output_20250305_105832.txt  opa_output_20250305_105837.txt  opa_output_20250305_105915.txt  opa_output_20250305_105917.txt  opa_output_20250305_122013.txt  opa_output_20250305_122017.txt  opa_output_20250305_125156.txt  opa_output_20250305_125159.txt  opa_output_20250305_125255.txt  opa_output_20250305_125258.txt  opa_output_20250305_130039.txt  opa_output_20250305_130040.txt  opa_output_20250305_144717.txt  opa_output_20250305_144721.txt  opa_output_20250305_191107.txt  opa_output_20250307_173858.txt
diagrams/: STYLE.md  generate_diagrams.py
docs/: INDEX.md  MILESTONE_EXPANDED_EVALS.md  MILESTONE_FIRST_RELEASE.md  MILESTONE_OPA_POLICY_MODULARITY.md  MILESTONE_XTENDED_EVAL.md  OPA_POLICY_ARCH_AND_PLAN.md  RegoParametrizationApproach.md  demo.cast  developer_guide.md  eu_ai_act_evaluator_integration_analysis.md  eu_ai_act_evaluator_integration_plan.md  eu_ai_act_implementation_summary.md  eu_ai_act_opa_policy_mapping.md  eu_ai_act_policy_list.md  eu_ai_act_test_plan.md  eu_ai_act_test_results.md  flexible_extraction.md  opa-integration-blueprint.md  opa_policy_structure.md  opa_results_schema.md  phase-1-eval-langfair.md  phase1_evaluators.md  phase1_implementation.md  phase1_implementation_summary.md  real_evaluators.md  roadmap.md  toxic-evaluation-guide.md  why-aicertify.md
examples/: .deepeval_telemetry.txt  EU_AI_Act_Compliance_Example.py  Loan-Application-Evaluator.py  Medical-Diagnosis-MultiSpecialist-Agents.py  Medical-Diagnosis-Using-API.py  README.md  auto_eval_demo.py  capture_report_data.py  context_serialization_test.py  debug_policy_evaluation.py  debug_policy_evaluation_eu_ai_act.py  debug_report_generation.py  external_opa_evaluator.py  medical_diagnosis_external_opa.py  opa_client.py  opa_integration_example.py  opa_path_override.py  opa_path_patch.py  opa_test.py  opa_wsl_wrapper.sh  patch_opa_path.py  quickstart.py  readable.txt  run_medical_diagnosis_example.py  run_with_bridge.py  sample_contract.json  simple_opa_test.py  test_context_serialization.py  test_opa_connection.py  wsl_opa_bridge.py
logs/: CareerCoachAI_chef_2025-02-25_123613.json
opa_core/: compliance_evaluator.py
reference-docs/: global-regulations-rated.md  industry-specific-landscape.md
reports/: ab_test_results.json  combined_validation_20250228_160217.json  combined_validation_20250228_160349.json  combined_validation_20250228_160437.json  combined_validation_20250228_160541.json  combined_validation_20250228_160821.json  combined_validation_20250228_161209.json  combined_validation_20250228_161420.json  combined_validation_20250228_161734.json  combined_validation_20250228_161811.json  combined_validation_20250228_163930.json  combined_validation_20250228_164233.json  combined_validation_20250228_164433.json  combined_validation_20250228_165953.json  combined_validation_20250228_170350.json  combined_validation_20250228_172814.json  combined_validation_20250228_173125.json  folder_report_My AI Assistant_2025-03-19_144614.html  folder_report_My AI Assistant_2025-03-19_145017.html  phase1_implementation_validation_20250228_160217.json  phase1_implementation_validation_20250228_160349.json  phase1_implementation_validation_20250228_160437.json  phase1_implementation_validation_20250228_160541.json  phase1_implementation_validation_20250228_160821.json  phase1_implementation_validation_20250228_161209.json  phase1_implementation_validation_20250228_161420.json  phase1_implementation_validation_20250228_161734.json  phase1_implementation_validation_20250228_161811.json  phase1_implementation_validation_20250228_163930.json  phase1_implementation_validation_20250228_164233.json  phase1_implementation_validation_20250228_164433.json  phase1_implementation_validation_20250228_165953.json  phase1_implementation_validation_20250228_170350.json  phase1_implementation_validation_20250228_172814.json  phase1_implementation_validation_20250228_173125.json  pre_implementation_validation_20250228_160217.json  pre_implementation_validation_20250228_160349.json  pre_implementation_validation_20250228_160437.json  pre_implementation_validation_20250228_160541.json  pre_implementation_validation_20250228_160821.json  (+13 more)
scripts/: ab_test_evaluators.py  (+15 more)
(+522 files in other folders)
