[project]
name = "aicertify"
version = "0.7.0"
description = "Compliance-as-code for AI systems. Audit your AI against the EU AI Act, NIST AI RMF, and 13+ regulatory frameworks using Open Policy Agent (OPA) — and produce audit-ready PDF, Markdown, JSON, or HTML reports."
authors = [
    {name = "Kapil Madan", email = "kapil.madan@gmail.com"},
    {name = "Principled Evolution", email = "info@principledevolution.ai"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = [
    "ai-governance",
    "ai-compliance",
    "ai-act",
    "eu-ai-act",
    "nist-ai-rmf",
    "responsible-ai",
    "open-policy-agent",
    "opa",
    "rego",
    "regulatory-compliance",
    "ai-audit",
    "ai-safety",
    "fairness",
    "policy-as-code",
    "ai-evaluation",
    "ai-certification",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "langfair @ git+https://github.com/mantric/langfair-mantric.git@python-3.12-support",
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "opa-python-client>=0.1.0",
    "requests>=2.33.0,<3.0.0",
    "python-dotenv>=1.2.2",
    "pandas>=2.2.0",
    "langchain-openai>=0.0.5",
    "pydantic-ai (>=0.0.24,<0.0.25)",
    "markdown (>=3.8.1,<4.0)",
    "reportlab (>=4.3.1,<5.0.0)",
    "yfinance (>=0.2.54,<0.3.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "huggingface-hub (>=0.34.0,<1.0)",
    "deepeval (>=2.4.8,<3.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "h11>=0.14.0",
    "torch>=2.7.0",
    "transformers>=4.53.0",
    "setuptools>=78.1.1",
    "pycares (>=4.9.0,<5.0.0)",
    # Explicit lower bounds for transitive dependencies that ship security
    # fixes Dependabot has flagged. Each is the minimum version with the
    # named CVE/GHSA addressed; upper bounds are intentionally loose so
    # the parent libraries (langchain*, deepeval, transformers, etc.) can
    # continue to resolve their own pins.
    "aiohttp>=3.13.4",             # 13 advisories (incl. zip bomb, SSRF, header smuggling)
    "urllib3>=2.7.0",              # 4 advisories (decompression bombs, cross-origin header leak)
    "pillow>=12.2.0",              # 4 advisories (PSD OOB write, FITS GZIP bomb, font overflow)
    "pypdf>=6.10.2",               # 14 advisories (multiple RAM-exhaust, infinite-loop fixes)
    "nltk>=3.9.4",                 # 1 critical zip slip + 4 high (downloader path traversal, AFO, XSS)
    "langchain-core>=0.3.85,<0.4",  # 1 critical serialization injection + 4 high; stay on 0.3.x stable
    "langchain>=0.3.30,<0.4",       # 1 high (unsafe deserialization); match langchain-core line
    "langchain-text-splitters>=0.3.9,<0.4",  # 1 high XXE + SSRF in HTMLHeaderTextSplitter
    "langchain-community>=0.3.27,<0.4", # 1 high XXE
    "langsmith>=0.7.31",            # 1 high deserialization + token-redaction bypass
    "pyasn1>=0.6.3",                # 2 high DoS (unbounded recursion)
    "protobuf>=5.29.6,<6",          # 1 high JSON recursion depth bypass; pin to 5.x to avoid major bump
    "banks>=2.4.2",                # 1 critical RCE via Jinja2 SSTI
    # starlette upgrade deferred — fastapi 0.115.x caps starlette<0.47;
    # the range-header DoS (GHSA-7f5h-v6xp-fcq8) requires bumping fastapi too.
    "sentencepiece>=0.2.1",        # 1 high heap overflow
    "orjson>=3.11.6",              # 1 high unbounded recursion
    "brotli>=1.2.0",               # 1 high DoS
    "marshmallow>=3.26.2",         # Schema.load(many) DoS
    "filelock>=3.20.3",            # TOCTOU symlink fixes
    "virtualenv>=20.36.1",         # TOCTOU directory-creation fix
    "Pygments>=2.20.0",            # ReDoS in GUID regex
]

[project.urls]
Homepage = "https://github.com/Principled-Evolution/aicertify"
Repository = "https://github.com/Principled-Evolution/aicertify"
Documentation = "https://github.com/Principled-Evolution/aicertify#readme"
Issues = "https://github.com/Principled-Evolution/aicertify/issues"
Changelog = "https://github.com/Principled-Evolution/aicertify/blob/main/CHANGELOG.md"
"Policy Library (gopal)" = "https://github.com/Principled-Evolution/gopal"

[project.scripts]
aicertify = "aicertify.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "aicertify" }]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
ruff = "^0.5.5"
pre-commit = "^4.2.0"
black = ">=25.1.0,<26.0.0"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
